<resources>
    <string name="app_name">tccws</string>

    <string name="descricao_entrada">Por favor faça o login para entrar no aplicativo</string>
    <string name="campo_usuario">Usuário</string>
    <string name="campo_senha">Senha</string>
    <string name="botao_continuar">Continuar</string>
    <string name="title_activity_empresa">EmpresaActivity</string>

    <string name="titulo_webservice">Web Service</string>
    <string name="titulo_acessodireto">Acesso direto a base de dados</string>

    <string name="botao_100">100</string>
    <string name="botao_500">500</string>
    <string name="botao_1000">1000</string>

    <string name="titulo_cenario">Cenário de teste de login, executa um select com condição where</string>
    <string name="titulo_cenario_cadastro">Cenário de teste de cadastro, executa um insert</string>
    <string name="titulo_cenario_atualizacao">Cenário de teste de atualização, executa um update</string>

</resources>
